changed feat: a href tag

--- a/onclick.html
+++ b/onclick.html
@@ -24,7 +24,7 @@
         <input type="button" value="Multiply"onclick="calculate(this)"/> 
         <input type="button" value="Divide"onclick="calculate(this)"/> 
         <input type="button" value="Modulus"onclick="calculate(this)"/> 
-        <p>Need more math help? <a href="http://www.math.com/students/practice.html" target="_blank" rel="noreferrer noopener">Math Help</p>
+        <p>Want to learn Math? <a href="http://www.math.com/students/practice.html" target="_blank" rel="noreferrer noopener">Math Help</p>
       </form>
     </div>
   </body>
