--- a/myCalculator/onclick.html
+++ b/myCalculator/onclick.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="form">
-      <h1> Calculator v1</h1>
+      <h1> Calculator</h1>
       <form name="calcForm">
         <label for="num1">Enter: Number 1</label>
         <input type="text" id="num1" name="num1" /> </br>
